<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Activities.ConfigDevices"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/device_info"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/device_name"
                android:hint="@string/device"
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/search_device"
                android:text="@string/search_device"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner"
                android:layout_weight="0"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/ip_device"
            android:hint="@string/ip_device"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />

        <EditText
            android:id="@+id/reference_device"
            android:hint="@string/reference_device"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enable_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_device"/>

        <Button
            android:id="@+id/insert_device"
            android:text="@string/insert_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/edit_device"
            android:text="@string/edit_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/delete_device"
            android:text="@string/delete_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/test_device"
            android:text="@string/test_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/show_device"
            android:text="@string/show_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:layout_margin="5dp"/>

    </LinearLayout>

</RelativeLayout>